<resources>
    <string name="app_name">Melbourne Parking Mate</string>

    <string name="tab_text_1">Parks</string>
    <string name="tab_text_2">Appointments</string>
    <string name="choose_location">Choose Parking Location</string>
    <string name="duration">Duration</string>

    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoicGF0cmlja2h1ZGdlIiwiYSI6ImNrMWJrbXlrMDJveTYzY3FkcWR1dmFzenoifQ.2wwsgj2cEf1-zuIySnT3Bg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>


    <string-array name="duration_spinner_array">
        <item>30 Mins</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
    </string-array>

    <string name="closest_spot_details">Closest Spot Details</string>

    <string name="action_settings">Settings</string>
    <string name="search_park">Search Car Parks</string>

    <string name="appointment_name_desc">Name</string>
    <string name="appointment_time_desc">Time</string>
    <string name="appointment_location_desc">Drop Off Location</string>
    <string name="appointment_search_button_desc">Find Nearest Parking Bays</string>

    <string name="space_details">Space Details</string>
    <string name="estimated_price">Estimated Hourly Rate</string>
    <string name="park">Park</string>

    <string name="parking_bay_sensor_source">https://data.melbourne.vic.gov.au/api/views/vh2v-4nfs/rows.json</string>
    <string name="parking_bay_restriction_source">https://data.melbourne.vic.gov.au/api/views/ntht-5rk7/rows.json</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="avoid_toll_pref">avoidToll</string>
    <string name="mocking_pref">mockingPref</string>
</resources>
