<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appointment_linear_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appointment_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        card_view:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appointment_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/appointment_name_desc"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/appointment_name_desc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/appointment_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appointment_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/appointment_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_name_desc" />

            <TextView
                android:id="@+id/appointment_time_desc"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/appointment_time_desc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appointment_name_desc"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appointment_time"
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appointment_name"
                app:layout_constraintTop_toBottomOf="@+id/appointment_time_desc" />

            <TextView
                android:id="@+id/appointment_location_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/appointment_location_desc"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_name" />

            <TextView
                android:id="@+id/appointment_location"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_location_desc" />

            <ImageButton
                android:id="@+id/search_location_button"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/appointment_search_button_desc"
                android:src="@drawable/ic_location_searching_black_44dp"
                android:onClick="onClick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appointment_location"
                app:layout_constraintTop_toTopOf="@+id/appointment_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
