<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_closest_spot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56sp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/closest_spot_linear"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/closest_spot_space_details"
            android:layout_width="0sp"
            android:layout_height="25sp"

            android:text="@string/closest_spot_details"
            android:textColor="#444"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/closest_spot_parking_restrictions"
            android:layout_width="wrap_content"
            android:layout_height="46sp"
            android:fontFamily="@font/vicroads"
            android:gravity="center"
            android:textColor="#286D2D"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/closest_spot_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closest_spot_space_details"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/closest_spot_address"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="0px"
            android:text="Loading Address"
            android:textColor="#444"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/closest_static_estimated_price"
            app:layout_constraintStart_toEndOf="@+id/closest_spot_parking_restrictions"
            app:layout_constraintTop_toBottomOf="@+id/closest_spot_space_details" />

        <TextView
            android:id="@+id/closest_static_estimated_price"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/estimated_price"
            android:textColor="#444"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closest_spot_address"
            app:layout_constraintTop_toBottomOf="@+id/closest_spot_space_details" />

        <TextView
            android:id="@+id/closest_rate_view"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textColor="#444"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closest_spot_address"
            app:layout_constraintTop_toBottomOf="@+id/closest_static_estimated_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/closest_park_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="#2196F3"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/park"
        android:textColor="#fff" />

</LinearLayout>