<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/space_details"
        android:textColor="#343838"
        android:textSize="18dp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/ParkingRestriction"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:fontFamily="@font/vicroads"
            android:gravity="center"
            android:text="24P"
            android:textColor="#008c9e"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7pt"
            android:fontFamily="@font/roboto"
            android:layout_marginLeft="5pt"
            android:paddingLeft="10px"
            android:paddingTop="0px"
            android:text="Loading Address"
            android:textColor="#444"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/ParkingRestriction"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/estimated_price"
            android:textColor="#343838"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/address"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#343838"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/park_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#005f6b"
        android:fontFamily="@font/roboto"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/park"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>